# ai-job-app

./: .gitignore  .npmrc  .prettierignore  CHANGELOG.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  SUPPORT.md  TERMS.md  THIRD_PARTY_NOTICES.md  eslint.config.js  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: build.yml
docs/: RELEASE.md
scripts/: build-sidecar.ps1  build_sidecar.py  bundle.mjs  changelog-section.mjs  changelog-section.test.mjs  check.mjs  generate-latest-json.mjs  generate-sbom.mjs  generate-third-party-list.mjs  set-version.mjs  tauri.mjs  test-updater-e2e.ps1  toolchain.mjs  updater_test_server.py  verify-release-suite.mjs  verify-release.mjs  write-release-notes.mjs
sidecar/: __init__.py  browser_ops.py  pdf_renderer.py  pyproject.toml  requirements-build.txt  requirements.txt  resume_parser.py  worker.py  worker_protocol.py
sidecar/tests/: test_boss_login_probe.py  test_worker.py
sidecar/tests/fixtures/: sample_resume.yaml
skills/greeting-message/: SKILL.md
skills/interview-preparation/: SKILL.md
skills/job-detail-extraction/: SKILL.md
skills/job-fit/: SKILL.md
skills/job-market-analysis/: SKILL.md
skills/report-competitiveness/: SKILL.md
skills/resume-chat/: SKILL.md
skills/resume-coverage/: SKILL.md
skills/resume-extraction/: SKILL.md
skills/resume-tailor/: SKILL.md
src/: app.css  app.html  test-setup.ts
src-tauri/: Cargo.toml  tauri.bundle.conf.json  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: analytics.rs  assistant.rs  commands.rs  db.rs  distribution.rs  lib.rs  llm.rs  main.rs  models.rs  provider_policy.rs  providers.rs  scoring.rs  secrets.rs  sidecar.rs  skills.rs  time.rs
src-tauri/src/assistant/: competitiveness.rs  coverage.rs  fit.rs  interview.rs  resume_chat.rs  settings.rs
src-tauri/src/commands/: jobs.rs  resumes.rs  scrape.rs  settings.rs
src-tauri/src/db/: core.rs  jobs.rs  migrations.rs  providers.rs  reports.rs  resumes.rs
src-tauri/tests/fixtures/: v0.1.7.sql
src/lib/: boss-cities.ts  clear-data.ts  date-time.test.ts  date-time.ts  export-file.ts  fit.test.ts  fit.ts  i18n.ts  job-filters.test.ts  job-filters.ts  list-order.test.ts  list-order.ts  mock-data.ts  modal-focus.test.ts  modal-focus.ts  provider-policy.test.ts  provider-policy.ts  report-competitiveness.test.ts  report.test.ts  (+23 more)
(+74 files in other folders)
