[project]
name = "ai-job-app-sidecar"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "requests>=2.32,<3",
  "websocket-client>=1.8,<2",
  "pypdf>=6.14.2,<7",
  "python-docx>=1.1,<2",
  "pypdfium2>=4.30,<5",
  "Pillow>=11,<13",
  "PyYAML>=6,<7",
  "rendercv[full]==2.8"
]

[project.scripts]
ai-job-sidecar = "worker:main"
