[project]
name = "ai-job-app-sidecar"
version = "0.2.0"
requires-python = "==3.13.6"
dependencies = [
  "requests>=2.32,<3",
  "websocket-client>=1.8,<2",
  "pypdf>=5,<7",
  "python-docx>=1.1,<2",
  "pypdfium2>=4.30,<5",
  "Pillow>=11,<13",
  "PyYAML>=6,<7",
  "rendercv[full]==2.8"
]

[project.scripts]
ai-job-sidecar = "worker:main"

[dependency-groups]
build = ["pyinstaller==6.21.0"]
